fixed horizontal spacing in spot-switch
- minor fixes in grid spacings

--- a/frontend/src/app/shared/components/datepicker/styles/datepicker.modal.sass
+++ b/frontend/src/app/shared/components/datepicker/styles/datepicker.modal.sass
@@ -20,7 +20,7 @@
   &--dates-container
     display: grid
     grid-template-columns: 1fr 1fr 150px
-    grid-column-gap: $spot-spacing-1
+    grid-gap: $spot-spacing-1
 
   &--date-field
     &_current,
